# clojure-py

./: .gitignore  Cargo.toml  README.md  conftest.py  pyproject.toml  setup.py
bench/: README.md  diff.py  run.py
crates/clojure_core/: Cargo.toml
crates/clojure_core/clj/: README.md
crates/clojure_core/clj/clojure/: core.clj
crates/clojure_core/src/: agent.rs  associative.rs  atom.rs  bean.rs  binding.rs  bound_fn.rs  char.rs  coll_reduce.rs  comparable.rs  counted.rs  dispatch.rs  exceptions.rs  future_.rs  ichunk.rs  ichunkedseq.rs  ideref.rs  ieditable_collection.rs  iequiv.rs  ifn.rs  ihasheq.rs  ikvreduce.rs  ilookup.rs  imeta.rs  indexed.rs  ipending.rs  ipersistent_collection.rs  ipersistent_list.rs  ipersistent_map.rs  ipersistent_set.rs  ipersistent_stack.rs  ipersistent_vector.rs  iseq.rs  iseqable.rs  itransient_associative.rs  itransient_collection.rs  itransient_map.rs  itransient_set.rs  itransient_vector.rs  keyword.rs  lib.rs  (+21 more)
crates/clojure_core/src/collections/: map_entry.rs  mod.rs  parraymap.rs  phashmap.rs  phashmap_node.rs  phashset.rs  plist.rs  ptreemap.rs  ptreeset.rs  pvector.rs  pvector_node.rs
crates/clojure_core/src/compiler/: analyzer.rs  capture_analysis.rs  emit.rs  letfn_cell.rs  method.rs  mod.rs  op.rs  peephole.rs  pool.rs
crates/clojure_core/src/eval/: core_shims.rs  env.rs  errors.rs  fn_value.rs  invoke.rs  load.rs  macros.rs  mod.rs  resolve.rs  rt_ns.rs  special_forms.rs
crates/clojure_core/src/printer/: mod.rs  print.rs
crates/clojure_core/src/reader/: dispatch.rs  errors.rs  forms.rs  lexer.rs  mod.rs  number.rs  source.rs  string.rs  token.rs
crates/clojure_core/src/seqs/: array_chunk.rs  chunk_buffer.rs  chunked_cons.rs  cons.rs  delay.rs  lazy_seq.rs  mod.rs  vector_rseq.rs  vector_seq.rs
crates/clojure_core/src/stm/: mod.rs  ref_.rs  txn.rs
crates/clojure_core/src/vm/: ic.rs  mod.rs
crates/clojure_core/tests/: loom_binding_stack.rs  loom_keyword_intern.rs  loom_method_cache.rs  loom_var_root.rs  proptest_hamt.rs
crates/clojure_py/: Cargo.toml
crates/clojure_py/src/: abcs.rs  api.rs  counted.rs  exception.rs  ifn.rs  intern.rs  lib.rs  pyowned.rs
crates/clojure_py/tests/: counted_pyobject.rs  ifn_pyobject.rs  marker_pyobject.rs  pyowned_refcount.rs  reduce.rs
crates/clojure_rt/: Cargo.toml
crates/clojure_rt/benches/: dispatch.rs  lazy_cons.rs  rc_micro.rs  rcimmix_lazy_cons.rs  rcimmix_remote_free.rs
crates/clojure_rt/src/: bootstrap.rs  error.rs  exception.rs  header.rs  lib.rs  primitives.rs  protocol.rs  rc.rs  reader.rs  registry.rs  rt.rs  type_registry.rs  value.rs
crates/clojure_rt/src/dispatch/: foreign.rs  ic.rs  mod.rs  perfect_hash.rs  stub_cache.rs
crates/clojure_rt/src/gc/: mod.rs  naive.rs
crates/clojure_rt/src/gc/rcimmix/: block.rs  drain.rs  large.rs  mod.rs  os.rs  pool.rs  tid.rs  tlab.rs
crates/clojure_rt/src/hash/: mod.rs  murmur3.rs  util.rs
crates/clojure_rt/src/protocols/: associative.rs  atom.rs  chunk.rs  chunked_seq.rs  coll.rs  collection.rs  counted.rs  deref.rs  editable_collection.rs  emptyable_collection.rs  equiv.rs  hash.rs  hash_eq.rs  ifn.rs  indexed.rs  indexing_reader.rs  lookup.rs  map.rs  map_entry.rs  meta.rs  mod.rs  named.rs  pending.rs  persistent_map.rs  persistent_set.rs  persistent_vector.rs  pushback_reader.rs  reader.rs  reduce.rs  ref.rs  reference.rs  reversible.rs  seq.rs  sequential.rs  set.rs  stack.rs  transient_associative.rs  transient_collection.rs  transient_map.rs  transient_vector.rs  (+3 more)
crates/clojure_rt/src/types/: array_chunk.rs  array_map.rs  array_map_seq.rs  atom.rs  big_decimal.rs  big_int.rs  cons.rs  delay.rs  hash_map.rs  hash_map_seq.rs  hash_set.rs  hash_set_seq.rs  inst.rs  keyword.rs  lazy_seq.rs  list.rs  map_entry.rs  mod.rs  namespace.rs  pattern.rs  ratio.rs  reduced.rs  string.rs  string_reader.rs  string_writer.rs  symbol.rs  transient_array_map.rs  transient_hash_map.rs  transient_vector.rs  uuid.rs  var.rs  vec_seq.rs  vector.rs  volatile.rs
crates/clojure_rt/tests/: array_chunk.rs  array_map.rs  atom.rs  big_numerics.rs  chunked_seq.rs  cons.rs  counted.rs  delay.rs  dispatch_handwired.rs  equiv.rs  hash.rs  hash_map.rs  hash_set.rs  hasheq.rs  ic_publish_race.rs  indexing_reader.rs  inst_uuid.rs  io.rs  keyword.rs  keyword_race_repro.rs  lazy_cons.rs  lazy_seq.rs  list.rs  loom_extend.rs  loom_ic.rs  loom_rc.rs  loom_rcimmix_remote_free.rs  macro_dispatch.rs  macro_implements.rs  macro_multi_arity.rs  macro_protocol.rs  macro_register_type.rs  map_entry.rs  namespace.rs  pattern.rs  proptest_array_map.rs  proptest_hash_map.rs  proptest_perfect_hash.rs  proptest_rc.rs  proptest_rcimmix.rs  (+21 more)
crates/clojure_rt_macros/: Cargo.toml
crates/clojure_rt_macros/src/: arity.rs  dispatch_macro.rs  implements.rs  lib.rs  protocol.rs  register_type.rs
crates/clojure_rt_macros/tests/: expand.rs
crates/clojure_rt_macros/tests/cases/: implements_basic.rs  protocol_basic.rs  protocol_marker.rs  register_type_basic.rs
doc/: deferred-work.md  dispatch-architecture-summary.md  module_port_audit.md  port_audit.md  rc-research-findings.md  rcimmix-allocator.md  type-system.md
src/clojure/: core.py  (+8 more)
tests/: conftest.py  test_agent.py  test_agent_error_semantics.py  test_agent_options_fuzz.py  test_ants_demo.py  test_arrays.py  test_atom_volatile.py  test_bigdecimal.py  test_bigint.py  test_binding.py  test_bound_fn.py  test_catch_builtin.py  test_catch_builtin_fuzz.py  test_char.py  test_chunked_seqs.py  test_collection_iterator_exhaustion.py  test_collection_seqs.py  test_collections_fuzz.py  test_compare_fuzz.py  test_compiler_corejs_prep.py  test_compiler_def.py  test_compiler_fn.py  test_compiler_fn_tail_recur.py  test_compiler_if_do_calls.py  test_compiler_interop.py  test_compiler_let.py  test_compiler_literals.py  test_compiler_loop.py  test_compiler_macros.py  test_compiler_multi_arity.py  test_compiler_new.py  test_compiler_set_bang.py  test_compiler_try_throw.py  test_compiler_varargs.py  test_compiler_vars.py  test_concurrency_stress.py  test_core_clj_batch10.py  test_core_clj_batch11.py  test_core_clj_batch12.py  (+171 more)
(+135 files in other folders)
