[workspace]
resolver = "2"
members = ["crates/clojure_core", "crates/clojure_core_macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "EPL-1.0"
repository = "https://github.com/tbaldridge/clojure-py"

[workspace.dependencies]
pyo3 = { version = "0.28", features = ["multiple-pymethods"] }
dashmap = "6"
parking_lot = "0.12"
inventory = "0.3"
once_cell = "1"
smallvec = { version = "1", features = ["const_generics", "union"] }
fxhash = "0.2"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
