[workspace]
resolver = "2"
members = ["crates/clojure_rt", "crates/clojure_rt_macros", "crates/clojure_py"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "EPL-1.0"
repository = "https://github.com/tbaldridge/clojure-py"

[workspace.dependencies]
clojure_rt = { path = "crates/clojure_rt" }
clojure_rt_macros = { path = "crates/clojure_rt_macros" }
arc-swap = "1"
inventory = "0.3"
once_cell = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
trybuild = "1"
parking_lot = "0.12"
pyo3 = { version = "0.28", default-features = false, features = ["macros"] }
