[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "clojure"
version = "0.1.0"
requires-python = ">=3.14"
description = "Clojure on Python (PyO3)"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]

[tool.maturin]
manifest-path = "crates/clojure_core/Cargo.toml"
module-name = "clojure._core"
python-source = "python"
features = ["pyo3/extension-module"]
include = [{ path = "python/clojure/**/*.clj", format = ["sdist", "wheel"] }]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-timeout"]
repl = ["prompt_toolkit>=3.0", "pygments>=2.15"]

[project.entry-points.pytest11]
clojure_test = "clojure.pytest_plugin"
