[build-system]
requires = ["setuptools>=78", "Cython>=3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "clojure-py"
version = "0.0.1"
description = "Faithful 1:1 port of JVM Clojure to Python (Cython, free-threaded)"
requires-python = ">=3.14"
license = "EPL-1.0"
dependencies = ["bytecode>=0.16"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["clojure*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
