[package]
name = "clojure_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "clojure_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
fxhash = { workspace = true }

[features]
loom = []
