[package]
name = "clojure_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "clojure_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
clojure_core_macros = { path = "../clojure_core_macros" }
pyo3 = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
fxhash = { workspace = true }

[dev-dependencies]
proptest = "1.5"
# For Rust-level integration tests (e.g. proptest_hamt), we need a linked
# Python interpreter. Pull in pyo3 with auto-initialize so test binaries
# can spin up CPython. The lib/cdylib builds still get `extension-module`
# via the pyo3/extension-module pass-through feature (see pyproject.toml);
# running `cargo test` without that feature links CPython directly.
pyo3 = { version = "0.28", features = ["auto-initialize", "multiple-pymethods"] }

[features]
loom = []

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"
