[package]
name = "clojure_rt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arc-swap.workspace = true
inventory.workspace = true
once_cell.workspace = true
clojure_rt_macros.workspace = true
parking_lot.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
bigdecimal.workspace = true
regex.workspace = true

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
proptest.workspace = true

[dev-dependencies.criterion]
workspace = true

[[bench]]
name = "lazy_cons"
harness = false

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "rc_micro"
harness = false

[[bench]]
name = "rcimmix_lazy_cons"
harness = false

[[bench]]
name = "rcimmix_remote_free"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
