[package]
name = "clojure_rt_macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
trybuild.workspace = true
clojure_rt = { path = "../clojure_rt" }
once_cell.workspace = true
